Updating developer/validmind-library.qmd landing page

--- a/site/developer/validmind-library.qmd
+++ b/site/developer/validmind-library.qmd
@@ -55,25 +55,15 @@ listing:
     - path: ../notebooks/tutorials/model_validation/4-finalize_validation_reporting.ipynb
       title: "4 — Finalize validation and reporting"
       description: "Wrap up by learning how to include custom tests and verifying that all tests conducted during model development were run and reported accurately. By the end of this series, you will have a validation report complete with artifacts ready for review."
-  - id: run-tests
+  - id: library-features
     grid-columns: 2
     type: grid
     max-description-length: 250
     sort: false
     fields: [title, description]
     contents: 
-    - ../notebooks/how_to/run_tests/1_run_dataset_based_tests.ipynb
-#    - ../notebooks/archive/configure_test_parameters.ipynb
-    - ../notebooks/code_samples/custom_tests/implement_custom_tests.ipynb
-  - id: code-samples
-    type: grid
-    max-description-length: 250
-    sort: false
-    fields: [title, description]
-    contents: 
-    - ../notebooks/code_samples/custom_tests/integrate_external_test_providers.ipynb
-    - ../notebooks/code_samples/nlp_and_llm/prompt_validation_demo.ipynb
-    - ../notebooks/code_samples/time_series/quickstart_time_series_full_suite.ipynb
+    - model-testing/testing-overview.qmd
+    - model-testing/feature-overview.qmd
   - id: library-documentation
     type: grid
     grid-columns: 2
@@ -108,16 +98,18 @@ The {{< var validmind.developer >}} is designed to be model agnostic. If your mo
 
 :::
 
-## Quickstart
+## Quickstarts
 
 After you [**sign up**](/guide/access/accessing-validmind.qmd) for {{< var vm.product >}} to get access, try our quickstarts for model documentation or validation:
 
 :::{#library-quickstart}
 :::
 
+## Tutorials
+
 <span id="development"></span>
 
-## {{< var vm.product >}} for model development
+#### {{< var vm.product >}} for model development
 
 Learn how to use ValidMind for your end-to-end model documentation process based on common model development scenarios with our *ValidMind for model development* series of four introductory notebooks:
 
@@ -126,7 +118,7 @@ Learn how to use ValidMind for your end-to-end model documentation process based
 
 <span id="validation"></span>
 
-## {{< var vm.product >}} for model validation
+#### {{< var vm.product >}} for model validation
 
 Learn how to use ValidMind for your end-to-end model validation process based on common scenarios with our *ValidMind for model validation* series of four introductory notebooks:
 
@@ -134,23 +126,13 @@ Learn how to use ValidMind for your end-to-end model validation process based on
 :::
 
 
-## Learn how to run tests
+## Learn how to use the {{< var validmind.developer >}}
 
 :::: {.flex .flex-wrap .justify-around}
 
-::: {.w-70-ns}
-The {{< var validmind.developer >}} provides many built-in tests and test suites which make it easy for developers to automate their model documentation. Start by running a pre-made test, then modify it, and finally create your own test:
+The {{< var validmind.developer >}} provides comprehensive out-of-the-box tests and test suites, and many other features that make it easy for you to automate building, documenting, validating your models and more.
 
-:::
-
-::: {.w-30-ns .tc}
-[Run tests & test suites](model-testing/testing-overview.qmd){.button .button-green}
-
-:::
-
-::::
-
-:::{#run-tests}
+:::{#library-features}
 :::
 
 ## Try the code samples
@@ -158,7 +140,7 @@ The {{< var validmind.developer >}} provides many built-in tests and test suites
 :::: {.flex .flex-wrap .justify-around}
 
 ::: {.w-70-ns}
-Our code samples showcase the capabilities of the {{< var validmind.developer >}}. Examples that you can build on and adapt for your own use cases include:
+Our code samples showcase the capabilities of the {{< var validmind.developer >}} and cover a variety of sample use cases.
 
 :::
 
@@ -168,9 +150,6 @@ Our code samples showcase the capabilities of the {{< var validmind.developer >}
 :::
 
 ::::
-
-:::{#code-samples}
-:::
 
 ## Work with model documentation
 
