--- a/site/developer/validmind-library.qmd
+++ b/site/developer/validmind-library.qmd
@@ -98,7 +98,7 @@ The {{< var validmind.developer >}} is designed to be model agnostic. If your mo
 
 :::
 
-## Quickstarts
+## Quickstart
 
 After you [**sign up**](/guide/access/accessing-validmind.qmd) for {{< var vm.product >}} to get access, try our quickstarts for model documentation or validation:
 
@@ -134,6 +134,8 @@ The {{< var validmind.developer >}} provides comprehensive out-of-the-box tests 
 
 :::{#library-features}
 :::
+
+::::
 
 ## Try the code samples
 
