More cleanup developer/validmind-library.qmd

--- a/site/developer/validmind-library.qmd
+++ b/site/developer/validmind-library.qmd
@@ -61,9 +61,19 @@ listing:
     max-description-length: 250
     sort: false
     fields: [title, description]
-    contents: 
+    contents:
     - model-testing/testing-overview.qmd
     - model-testing/feature-overview.qmd
+  - id: code-samples
+    grid-columns: 3
+    type: grid
+    max-description-length: 350
+    sort: false
+    fields: [title, description]
+    contents:
+    - ../notebooks/use_cases/agents/document_agentic_ai.ipynb
+    - ../notebooks/use_cases/credit_risk/document_excel_application_scorecard.ipynb
+    - ../notebooks/use_cases/model_validation/validate_application_scorecard.ipynb
   - id: library-documentation
     type: grid
     grid-columns: 2
@@ -100,12 +110,14 @@ The {{< var validmind.developer >}} is designed to be model agnostic. If your mo
 
 ## Quickstart
 
-After you [**sign up**](/guide/access/accessing-validmind.qmd) for {{< var vm.product >}} to get access, try our quickstarts for model documentation or validation:
+After you [**sign up**](/guide/access/accessing-validmind.qmd) for {{< var vm.product >}} to get access, try our Jupyter Notebook quickstarts for model documentation or validation:
 
 :::{#library-quickstart}
 :::
 
 ## Tutorials
+
+Learn how to use the {{<var validmind.developer>}} with our high-level Jupyter Notebook courses covering usage of ValidMind for specific roles or concepts.
 
 <span id="development"></span>
 
@@ -130,7 +142,7 @@ Learn how to use ValidMind for your end-to-end model validation process based on
 
 :::: {.flex .flex-wrap .justify-around}
 
-The {{< var validmind.developer >}} provides comprehensive out-of-the-box tests and test suites, and many other features that make it easy for you to automate building, documenting, validating your models and more.
+Learn how to use the comprehensive out-of-the-box tests and test suites, and other features in the {{< var validmind.developer >}} that make it easy for you to automate building, documenting, validating your models and more.
 
 :::{#library-features}
 :::
@@ -141,33 +153,25 @@ The {{< var validmind.developer >}} provides comprehensive out-of-the-box tests 
 
 :::: {.flex .flex-wrap .justify-around}
 
-::: {.w-70-ns}
-Our code samples showcase the capabilities of the {{< var validmind.developer >}} and cover a variety of sample use cases.
-
+::: {.w-75-ns}
+Try our Jupyter Notebook code samples that showcase the capabilities of the {{< var validmind.developer >}} and cover a variety of sample use cases.
 :::
 
-::: {.w-30-ns .tc}
+::: {.w-25-ns .tr}
 [All code samples](samples-jupyter-notebooks.qmd){.button .button-green}
 
 :::
 
 ::::
 
+Examples that you can build on and adapt for your own usage include:
+
+:::{#code-samples}
+:::
+
 ## Work with model documentation
 
-:::: {.flex .flex-wrap .justify-around}
-
-::: {.w-60-ns .pr3}
-After you have tried out the {{< var validmind.developer >}}, continue working with your model documentation in the {{< var validmind.platform >}}:
-
-:::
-
-::: {.w-40-ns .tc}
-[Working with model documentation](/guide/model-documentation/working-with-model-documentation.qmd){.button .button-green}
-
-:::
-
-::::
+After you have tried out the {{< var validmind.developer >}}, continue working with your model documentation in the {{< var validmind.platform >}}:[^3]
 
 :::{#library-documentation}
 :::
@@ -178,3 +182,5 @@ After you have tried out the {{< var validmind.developer >}}, continue working w
 [^1]: [{{< var vm.product >}} for model development](#development)
 
 [^2]: [{{< var vm.product >}} for model validation](#validation)
+
+[^3]: [Working with model documentation](/guide/model-documentation/working-with-model-documentation.qmd)
