Modifying use case script to auto-populate use-cases in panel tabs

--- a/site/developer/samples-jupyter-notebooks.qmd
+++ b/site/developer/samples-jupyter-notebooks.qmd
@@ -5,14 +5,69 @@
 title: "Code samples"
 date: last-modified
 listing:
-  type: grid
-  image-placeholder: "jupyter-logo-rectangle.svg"
-  max-description-length: 250
-  image-height: "100%"
-  fields: [title, description, reading-time]
-  contents: 
-    - "../notebooks/code_samples/*/*.ipynb"
-    - "../notebooks/code_samples/custom_tests/integrate_external_test_providers.ipynb"
+  - id: agents
+    type: grid
+    image-placeholder: "jupyter-logo-rectangle.svg"
+    max-description-length: 250
+    image-height: "100%"
+    fields: [title, description, reading-time]
+    contents: "../notebooks/use_cases/agents/*.ipynb"
+  - id: capital-markets
+    type: grid
+    image-placeholder: "jupyter-logo-rectangle.svg"
+    max-description-length: 250
+    image-height: "100%"
+    fields: [title, description, reading-time]
+    contents: "../notebooks/use_cases/capital_markets/*.ipynb"
+  - id: code-explainer
+    type: grid
+    image-placeholder: "jupyter-logo-rectangle.svg"
+    max-description-length: 250
+    image-height: "100%"
+    fields: [title, description, reading-time]
+    contents: "../notebooks/use_cases/code_explainer/*.ipynb"
+  - id: credit-risk
+    type: grid
+    image-placeholder: "jupyter-logo-rectangle.svg"
+    max-description-length: 250
+    image-height: "100%"
+    fields: [title, description, reading-time]
+    contents: "../notebooks/use_cases/credit_risk/*.ipynb"
+  - id: model-validation
+    type: grid
+    image-placeholder: "jupyter-logo-rectangle.svg"
+    max-description-length: 250
+    image-height: "100%"
+    fields: [title, description, reading-time]
+    contents: "../notebooks/use_cases/model_validation/*.ipynb"
+  - id: nlp-and-llm
+    type: grid
+    image-placeholder: "jupyter-logo-rectangle.svg"
+    max-description-length: 250
+    image-height: "100%"
+    fields: [title, description, reading-time]
+    contents: "../notebooks/use_cases/nlp_and_llm/*.ipynb"
+  - id: ongoing-monitoring
+    type: grid
+    image-placeholder: "jupyter-logo-rectangle.svg"
+    max-description-length: 250
+    image-height: "100%"
+    fields: [title, description, reading-time]
+    contents: "../notebooks/use_cases/ongoing_monitoring/*.ipynb"
+  - id: regression
+    type: grid
+    image-placeholder: "jupyter-logo-rectangle.svg"
+    max-description-length: 250
+    image-height: "100%"
+    fields: [title, description, reading-time]
+    contents: "../notebooks/use_cases/regression/*.ipynb"
+  - id: time-series
+    type: grid
+    image-placeholder: "jupyter-logo-rectangle.svg"
+    max-description-length: 250
+    image-height: "100%"
+    fields: [title, description, reading-time]
+    contents: "../notebooks/use_cases/time_series/*.ipynb"
 fig-cap-location: top
 aliases:
   - /guide/samples-jupyter-notebooks.html
@@ -43,31 +98,53 @@ Our Jupyter Notebook code samples showcase the capabilities and features of the 
 
 ::::
 
-## Quickstarts
+## By use case
 
-Learn how to develop or validate a simple customer churn model with {{< var vm.product >}}. The easiest way to try the quickstarts are on JupyterHub:
+:::{.panel-tabset}
 
-:::: {.flex .flex-wrap .justify-around}
+## Agents
 
-::: {.w-50-ns}
+:::{#agents}
+:::
 
-::: {.tc}
-[{{< fa code >}} Quickstart for model documentation]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/quickstart/quickstart_model_documentation.ipynb){.button target="_blank"}
+## Capital markets
 
+:::{#capital-markets}
+:::
+
+## Code explainer
+
+:::{#code-explainer}
+:::
+
+## Credit risk
+
+:::{#credit-risk}
+:::
+
+## Model validation
+
+:::{#model-validation}
+:::
+
+## NLP and LLM
+
+:::{#nlp-and-llm}
+:::
+
+## Ongoing monitoring
+
+:::{#ongoing-monitoring}
+:::
+
+## Regression
+
+:::{#regression}
+:::
+
+## Time series
+
+:::{#time-series}
 :::
 
 :::
-
-::: {.w-40-ns}
-
-::: {.tc}
-[{{< fa code >}} Quickstart for model validation]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/quickstart/quickstart_model_validation.ipynb){.button target="_blank"}
-
-:::
-
-:::
-
-::::
-
-
-## Code samples for your use case
