--- a/site/developer/validmind-library.qmd
+++ b/site/developer/validmind-library.qmd
@@ -149,7 +149,7 @@ Learn how to use the comprehensive out-of-the-box tests and test suites, and oth
 
 ::::
 
-## Try the code samples
+## Try code samples by use case
 
 :::: {.flex .flex-wrap .justify-around}
 
@@ -158,7 +158,7 @@ Try our Jupyter Notebook code samples that showcase the capabilities of the {{< 
 :::
 
 ::: {.w-25-ns .tr}
-[All code samples](samples-jupyter-notebooks.qmd){.button .button-green}
+[Code samples<br>by use case](samples-jupyter-notebooks.qmd){.button .button-green}
 
 :::
 
