--- a/site/developer/samples-jupyter-notebooks.qmd
+++ b/site/developer/samples-jupyter-notebooks.qmd
@@ -7,64 +7,73 @@ date: last-modified
 listing:
   - id: agents
     type: grid
+    grid-columns: 2
     image-placeholder: "jupyter-logo-rectangle.svg"
-    max-description-length: 250
+    max-description-length: 350
     image-height: "100%"
     fields: [title, description, reading-time]
     contents: "../notebooks/use_cases/agents/*.ipynb"
   - id: capital-markets
     type: grid
+    grid-columns: 2
     image-placeholder: "jupyter-logo-rectangle.svg"
-    max-description-length: 250
+    max-description-length: 350
     image-height: "100%"
     fields: [title, description, reading-time]
     contents: "../notebooks/use_cases/capital_markets/*.ipynb"
   - id: code-explainer
     type: grid
+    grid-columns: 2
     image-placeholder: "jupyter-logo-rectangle.svg"
-    max-description-length: 250
+    max-description-length: 350
     image-height: "100%"
     fields: [title, description, reading-time]
     contents: "../notebooks/use_cases/code_explainer/*.ipynb"
   - id: credit-risk
     type: grid
+    grid-columns: 2
     image-placeholder: "jupyter-logo-rectangle.svg"
-    max-description-length: 250
+    max-description-length: 350
     image-height: "100%"
     fields: [title, description, reading-time]
     contents: "../notebooks/use_cases/credit_risk/*.ipynb"
   - id: model-validation
     type: grid
+    grid-columns: 2
     image-placeholder: "jupyter-logo-rectangle.svg"
-    max-description-length: 250
+    max-description-length: 350
     image-height: "100%"
     fields: [title, description, reading-time]
     contents: "../notebooks/use_cases/model_validation/*.ipynb"
   - id: nlp-and-llm
     type: grid
+    grid-columns: 2
     image-placeholder: "jupyter-logo-rectangle.svg"
-    max-description-length: 250
+    max-description-length: 350
     image-height: "100%"
     fields: [title, description, reading-time]
     contents: "../notebooks/use_cases/nlp_and_llm/*.ipynb"
   - id: ongoing-monitoring
     type: grid
+    grid-columns: 2
     image-placeholder: "jupyter-logo-rectangle.svg"
-    max-description-length: 250
+    max-description-length: 350
     image-height: "100%"
     fields: [title, description, reading-time]
     contents: "../notebooks/use_cases/ongoing_monitoring/*.ipynb"
   - id: regression
     type: grid
+    grid-columns: 2
     image-placeholder: "jupyter-logo-rectangle.svg"
-    max-description-length: 250
+    max-description-length: 350
     image-height: "100%"
     fields: [title, description, reading-time]
     contents: "../notebooks/use_cases/regression/*.ipynb"
   - id: time-series
     type: grid
+    grid-columns: 2
     image-placeholder: "jupyter-logo-rectangle.svg"
-    max-description-length: 250
+    max-description-length: 350
     image-height: "100%"
     fields: [title, description, reading-time]
     contents: "../notebooks/use_cases/time_series/*.ipynb"
