--- a/site/developer/model-testing/testing-overview.qmd
+++ b/site/developer/model-testing/testing-overview.qmd
@@ -61,7 +61,7 @@ listing:
       description: "Learn how to take control over the context that drives test description generation."
 ---
 
-{{< var vm.product >}} provides many built-in tests and test suites, which help you produce documentation during stages of the model development lifecycle where you need to validate that your work satisfies MRM (model risk management) requirements.
+{{< var vm.product >}} provides many built-in tests and test suites, which help you produce documentation during stages of the model development lifecycle where you need to validate that your work satisfies risk management requirements.
 
 ## Getting started
 
