Add comment pointing to script and README for permissions generation

--- a/site/guide/configuration/manage-permissions.qmd
+++ b/site/guide/configuration/manage-permissions.qmd
@@ -38,6 +38,11 @@ Please note that the [{{< fa hand >}} Customer Admin]{.bubble} role has the high
 
 The following tables outline the default roles and permissions provided by {{< var vm.product >}}.
 
+<!-- 
+  The permissions tables below are auto-generated from backend source files.
+  To regenerate, run: python scripts/generate_permissions_docs.py
+  See README.md "Permissions documentation" section for details.
+-->
 {{< include _permissions-generated.qmd >}}
 
 
