--- a/site/developer/model-testing/testing-overview.qmd
+++ b/site/developer/model-testing/testing-overview.qmd
@@ -28,6 +28,7 @@ listing:
     - ../../notebooks/how_to/tests/run_tests/2_run_comparison_tests.ipynb
   - id: tests-custom
     type: grid
+    grid-columns: 2
     max-description-length: 250
     sort: false
     fields: [title, description]
@@ -45,8 +46,40 @@ Start by exploring {{<var validmind.developer >}}'s available tests and tests su
 :::{#explore-tests}
 :::
 
+<br>
 
+::: {.callout-button .pl4 .nt4}
+::: {.callout collapse="true" appearance="minimal"}
 ### When do I use tests and test suites?
+
+While you have the flexibility to decide when to use which {{< var vm.product >}} tests, we have identified a few typical scenarios with their own characteristics and needs:
+
+## Dataset testing
+
+To document and validate your dataset:
+
+- For generic tabular datasets: use the [`tabular_dataset`](/validmind/validmind/test_suites/tabular_datasets.qmd){target="_blank"} test suite.
+- For time-series datasets: use the [`time_series_dataset`](/validmind/validmind/test_suites/time_series.qmd#timeseriesdataset){target="_blank"} test suite.
+
+
+## Model testing
+
+To document and validate your model:
+
+- For binary classification models: use the [`classifier`](/validmind/validmind/test_suites/classifier.qmd){target="_blank"} test suite.
+- For time series models: use the [`timeseries`](/validmind/validmind/test_suites/time_series.qmd){target="_blank"} test suite.
+
+## End-to-end testing
+
+To document a binary classification model and the relevant dataset end-to-end:
+
+Use the [`classifier_full_suite`](/validmind/validmind/test_suites/classifier.qmd#classifierfullsuite){target="_blank"} test suite.
+
+
+:::
+:::
+
+<!-- ### When do I use tests and test suites?
 
 While you have the flexibility to decide when to use which {{< var vm.product >}} tests, we have identified a few typical scenarios with their own characteristics and needs:
 
@@ -84,7 +117,7 @@ Use the [`classifier_full_suite`](/validmind/validmind/test_suites/classifier.qm
 
 :::
 
-::::
+:::: -->
 
 ## Run tests
 
@@ -101,7 +134,7 @@ Next, learn how to use the {{<var validmind.developer >}} to run tests on datase
 :::
 :::
 
-### Can I use my own tests?
+#### Can I use my own tests?
 
 Absolutely! {{< var vm.product >}} supports custom tests that you develop yourself or that are provided by third-party test libraries, also referred to as _test providers_. We provide instructions with code examples that you can adapt:
 
