--- a/site/developer/model-testing/testing-overview.qmd
+++ b/site/developer/model-testing/testing-overview.qmd
@@ -17,7 +17,7 @@ listing:
     - ../../notebooks/how_to/tests/explore_tests/explore_tests.ipynb
     - ../../notebooks/how_to/tests/explore_tests/explore_test_suites.ipynb
     - test-sandbox.qmd
-  - id: run-tests
+  - id: test-basics
     type: grid
     grid-columns: 2
     max-description-length: 350
@@ -26,10 +26,26 @@ listing:
     contents:
     - ../../notebooks/how_to/tests/run_tests/1_run_dataset_based_tests.ipynb
     - ../../notebooks/how_to/tests/run_tests/2_run_comparison_tests.ipynb
+  - id: configure-tests
+    type: grid
+    grid-columns: 3
+    max-description-length: 350
+    sort: false
+    fields: [title, description]
+    contents:
+    - ../../notebooks/how_to/tests/run_tests/configure_tests/*.ipynb
+  - id: documentation-tests
+    type: grid
+    grid-columns: 3
+    max-description-length: 350
+    sort: false
+    fields: [title, description]
+    contents:
+    - ../../notebooks/how_to/tests/run_tests/documentation_tests/*.ipynb
   - id: tests-custom
     type: grid
     grid-columns: 2
-    max-description-length: 250
+    max-description-length: 350
     sort: false
     fields: [title, description]
     contents:
@@ -37,7 +53,7 @@ listing:
     - ../../notebooks/how_to/tests/custom_tests/integrate_external_test_providers.ipynb
 ---
 
-{{< var vm.product >}} provides many built-in tests and test suites, which help you produce documentation during stages of the model lifecycle, such as model development and validation, where you need to ensure that your work satisfies regulatory and risk management requirements.
+{{< var vm.product >}} provides many built-in tests and test suites, which help you produce documentation during stages of the model lifecycle, where you need to ensure that your work satisfies regulatory and risk management requirements.
 
 ## Explore tests
 
@@ -79,51 +95,28 @@ Use the [`classifier_full_suite`](/validmind/validmind/test_suites/classifier.qm
 :::
 :::
 
-<!-- ### When do I use tests and test suites?
-
-While you have the flexibility to decide when to use which {{< var vm.product >}} tests, we have identified a few typical scenarios with their own characteristics and needs:
-
-:::: {.flex .flex-wrap .justify-around}
-
-::: {.w-30-ns}
-
-#### Dataset testing
-
-To document and validate your dataset:
-
-- For generic tabular datasets: use the [`tabular_dataset`](/validmind/validmind/test_suites/tabular_datasets.qmd){target="_blank"} test suite.
-- For time-series datasets: use the [`time_series_dataset`](/validmind/validmind/test_suites/time_series.qmd#timeseriesdataset){target="_blank"} test suite. 
-
-:::
-
-::: {.w-30-ns}
-
-#### Model testing
-
-To document and validate your model:
-
-- For binary classification models: use the [`classifier`](/validmind/validmind/test_suites/classifier.qmd){target="_blank"} test suite.
-- For time series models: use the [`timeseries`](/validmind/validmind/test_suites/time_series.qmd){target="_blank"} test suite.
-
-:::
-
-::: {.w-30-ns}
-
-#### End-to-end testing
-
-To document a binary classification model and the relevant dataset end-to-end: 
-
-Use the [`classifier_full_suite`](/validmind/validmind/test_suites/classifier.qmd#classifierfullsuite){target="_blank"} test suite.
-
-:::
-
-:::: -->
-
 ## Run tests
 
 Next, learn how to use the {{<var validmind.developer >}} to run tests on datasets and models:
 
-:::{#run-tests}
+::: {.panel-tabset}
+
+### Test running basics
+
+:::{#test-basics}
+:::
+
+### Configuring tests
+
+:::{#configure-tests}
+:::
+
+### Documentation tests
+
+:::{#documentation-tests}
+:::
+
+
 :::
 
 ::: {.column-margin}
@@ -141,62 +134,4 @@ Absolutely! {{< var vm.product >}} supports custom tests that you develop yourse
 :::{#tests-custom}
 :::
 
-<!-- ## Intermediate
 
-Building on previous sections, add your own test provider, set up datasets, run tests on individual sections in your model documentation, and more:
-
-:::{#tests-intermediate}
-:::
-
-## Advanced
-
-Need more? Try some of the advanced features provided by the {{< var vm.developer >}}: 
-
-:::{#tests-advanced}
-:::
-
-## When do I use tests and test suites?
-
-While you have the flexibility to decide when to use which {{< var vm.product >}} tests, we have identified a few typical scenarios with their own characteristics and needs:
-
-:::: {.flex .flex-wrap .justify-around}
-
-::: {.w-30-ns}
-
-#### Dataset testing
-
-To document and validate your dataset:
-
-- For generic tabular datasets: use the [`tabular_dataset`](/validmind/validmind/test_suites/tabular_datasets.qmd){target="_blank"} test suite.
-- For time-series datasets: use the [`time_series_dataset`](/validmind/validmind/test_suites/time_series.qmd#timeseriesdataset){target="_blank"} test suite. 
-
-:::
-
-::: {.w-30-ns}
-
-#### Model testing
-
-To document and validate your model:
-
-- For binary classification models: use the [`classifier`](/validmind/validmind/test_suites/classifier.qmd){target="_blank"} test suite.
-- For time series models: use the [`timeseries`](/validmind/validmind/test_suites/time_series.qmd){target="_blank"} test suite.
-
-:::
-
-::: {.w-30-ns}
-
-#### End-to-end testing
-
-To document a binary classification model and the relevant dataset end-to-end: 
-
-Use the [`classifier_full_suite`](/validmind/validmind/test_suites/classifier.qmd#classifierfullsuite){target="_blank"} test suite.
-
-:::
-
-:::: -->
-
-
-
-## {{< var validmind.api >}} reference
-
-[{{< var validmind.developer >}} API Reference](/validmind/validmind.qmd){target="_blank" .button .button-green}
