--- a/site/developer/validmind-library.qmd
+++ b/site/developer/validmind-library.qmd
@@ -176,6 +176,9 @@ After you have tried out the {{< var validmind.developer >}}, continue working w
 :::{#library-documentation}
 :::
 
+## {{< var validmind.api >}} reference
+
+[{{< var validmind.developer >}} API Reference](/validmind/validmind.qmd){target="_blank" .button .button-green}
 
 <!-- FOOTNOTES -->
 
