More cleanup: model-testing/testing-overview.qmd

--- a/site/developer/model-testing/testing-overview.qmd
+++ b/site/developer/model-testing/testing-overview.qmd
@@ -57,47 +57,43 @@ listing:
 
 ## Explore tests
 
-Start by exploring {{<var validmind.developer >}}'s available tests and tests suites using the {{< var vm.developer >}} or the interactive test sandbox:
+Start by exploring the {{< var validmind.developer >}}'s available tests and tests suites using the {{< var vm.developer >}} or the interactive test sandbox:
 
 :::{#explore-tests}
 :::
 
-<br>
-
-::: {.callout-button .pl4 .nt4}
-::: {.callout collapse="true" appearance="minimal"}
-### When do I use tests and test suites?
+#### When do I use tests and test suites?
 
 While you have the flexibility to decide when to use which {{< var vm.product >}} tests, we have identified a few typical scenarios with their own characteristics and needs:
 
-## Dataset testing
+::: {.panel-tabset}
+
+### Dataset testing
 
 To document and validate your dataset:
 
 - For generic tabular datasets: use the [`tabular_dataset`](/validmind/validmind/test_suites/tabular_datasets.qmd){target="_blank"} test suite.
 - For time-series datasets: use the [`time_series_dataset`](/validmind/validmind/test_suites/time_series.qmd#timeseriesdataset){target="_blank"} test suite.
 
-
-## Model testing
+### Model testing
 
 To document and validate your model:
 
 - For binary classification models: use the [`classifier`](/validmind/validmind/test_suites/classifier.qmd){target="_blank"} test suite.
 - For time series models: use the [`timeseries`](/validmind/validmind/test_suites/time_series.qmd){target="_blank"} test suite.
 
-## End-to-end testing
+### End-to-end testing
 
 To document a binary classification model and the relevant dataset end-to-end:
 
 Use the [`classifier_full_suite`](/validmind/validmind/test_suites/classifier.qmd#classifierfullsuite){target="_blank"} test suite.
 
+:::
 
-:::
-:::
 
 ## Run tests
 
-Next, learn how to use the {{<var validmind.developer >}} to run tests on datasets and models:
+Next, learn how to use the {{< var validmind.developer >}} to run tests on datasets and models:
 
 ::: {.panel-tabset}
 
@@ -129,7 +125,9 @@ Next, learn how to use the {{<var validmind.developer >}} to run tests on datase
 
 #### Can I use my own tests?
 
-Absolutely! {{< var vm.product >}} supports custom tests that you develop yourself or that are provided by third-party test libraries, also referred to as _test providers_. We provide instructions with code examples that you can adapt:
+Absolutely! {{< var vm.product >}} supports custom tests that you develop yourself or that are provided by third-party test libraries, also referred to as _test providers_.
+
+We provide instructions with code examples that you can adapt:
 
 :::{#tests-custom}
 :::
