Shuffling test desc page around

--- a/site/developer/supported-models.qmd
+++ b/site/developer/supported-models.qmd
@@ -15,7 +15,7 @@ listing:
     fields: [title, description]
     contents:
     - ../model-testing/testing-overview.qmd
-    - ../model-testing/test-descriptions.qmd
+    - test-descriptions.qmd
     - ../samples-jupyter-notebooks.qmd
 ---
 
