--- a/site/developer/test-descriptions.qmd
+++ b/site/developer/test-descriptions.qmd
@@ -6,27 +6,28 @@ title: "Test descriptions"
 date: last-modified
 aliases:
   - /guide/test-descriptions.html
+  - /developer/model-testing/test-descriptions.html
 listing:
   - id: data-validation
-    contents: "../../tests/data_validation/*.md"
+    contents: "../tests/data_validation/*.md"
     type: grid
     max-description-length: 250
     page-size: 150
     fields: [title, description]
   - id: model-validation
     type: grid
-    contents: "../../tests/model_validation/*.md"
+    contents: "../tests/model_validation/*.md"
     max-description-length: 250
     page-size: 150
     fields: [title, description]
   - id: prompt-validation
-    contents: "../../tests/prompt_validation/*.md"
+    contents: "../tests/prompt_validation/*.md"
     type: grid
     max-description-length: 250
     page-size: 150
     fields: [title, description]  
   - id: ongoing-monitoring
-    contents: "../../tests/ongoing_monitoring/*.md"
+    contents: "../tests/ongoing_monitoring/*.md"
     type: grid
     max-description-length: 250
     page-size: 150
@@ -36,7 +37,7 @@ listing:
 Tests that are available as part of the {{< var validmind.developer >}}, grouped by type of validation or monitoring test.
 
 ::: {.callout}
-## {{< fa flask >}} [Try the test sandbox <sup>[beta]{.smallcaps}</sup>](test-sandbox.qmd)
+## {{< fa flask >}} [Try the test sandbox <sup>[beta]{.smallcaps}</sup>](model-testing/test-sandbox.qmd)
 
 Explore our interactive sandbox to see what tests are available in the {{< var validmind.developer >}}.
 :::
