--- a/site/developer/model-testing/testing-overview.qmd
+++ b/site/developer/model-testing/testing-overview.qmd
@@ -9,14 +9,22 @@ aliases:
 listing:
   - id: explore-tests
     type: grid
-    grid-columns: 3
+    grid-columns: 2
     max-description-length: 350
     sort: false
     fields: [title, description]
     contents:
     - ../../notebooks/how_to/tests/explore_tests/explore_tests.ipynb
     - ../../notebooks/how_to/tests/explore_tests/explore_test_suites.ipynb
+  - id: test-reference
+    type: grid
+    grid-columns: 2
+    max-description-length: 350
+    sort: false
+    fields: [title, description]
+    contents:
     - test-sandbox.qmd
+    - ../test-descriptions.qmd
   - id: test-basics
     type: grid
     grid-columns: 2
@@ -57,9 +65,20 @@ listing:
 
 ## Explore tests
 
-Start by exploring the {{< var validmind.developer >}}'s available tests and tests suites using the {{< var vm.developer >}} or the interactive test sandbox:
+Start by exploring the {{< var validmind.developer >}}'s available tests and tests suites:
+
+::: {.panel-tabset}
+
+## Explore tests using the {{< var vm.developer >}}
 
 :::{#explore-tests}
+:::
+
+## Explore tests here our documentation
+
+:::{#test-reference}
+:::
+
 :::
 
 #### When do I use tests and test suites?
@@ -131,5 +150,3 @@ We provide instructions with code examples that you can adapt:
 
 :::{#tests-custom}
 :::
-
-
