--- a/site/developer/validmind-library.qmd
+++ b/site/developer/validmind-library.qmd
@@ -115,7 +115,7 @@ After you [**sign up**](/guide/access/accessing-validmind.qmd) for {{< var vm.pr
 :::{#library-quickstart}
 :::
 
-## Tutorials
+## End-to-end tutorials
 
 Learn how to use the {{<var validmind.developer>}} with our high-level Jupyter Notebook courses covering usage of ValidMind for specific roles or concepts.
 
